--- a/vecinosreina/pubspec.yaml
+++ b/vecinosreina/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   cloud_firestore: ^5.6.12
   google_sign_in: ^7.2.0
   firebase_auth: ^5.7.0
+  image_picker: ^1.1.2 
+  firebase_storage: ^12.1.0
 
 dev_dependencies:
   flutter_test:
@@ -27,3 +29,5 @@ flutter:
     - assets/Vecinos-reina-logo.png
     - assets/google.png
     - assets/pintura.jpg
+    - assets/talleres-infantiles.png
+    - assets/danza.png
