--- a/vecinosreina/pubspec.yaml
+++ b/vecinosreina/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_auth: ^5.7.0
   image_picker: ^1.1.2 
   firebase_storage: ^12.1.0
+  google_maps_flutter: ^2.6.0 
 
 dev_dependencies:
   flutter_test:
